# homeboard

./: .gitignore  Cargo.toml  flake.nix
src/: main.rs
src/data/: static_paths.rs
static/: index.html
