[package]
name = "homeboard"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.8"
futures = "0.3.31"
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = "0.6.8"
