[package]
name = "homeboard"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
axum = { version = "0.8.8", features = ["multipart"] }
clap = { version = "4.5.53", features = ["derive"] }
futures = "0.3.31"
rust-embed = "8.9.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["fs", "io-util", "rt-multi-thread", "macros"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.17", features = ["io"] }
tower = "0.5.2"
tower-http = "0.6.8"
